# visiblyai-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
.claude/memory/: ARCHITECTURE.md  TEST_RESULTS.md  TOOLS.md
.claude/skills/: ci-setup-guide.md  competitor-analysis.md  full-seo-audit.md  geo-audit.md  gsc-report.md  keyword-optimization.md  keyword-performance-report.md  keyword-research.md  quick-seo-audit.md  seo-audit.md  seo-potential-report.md  seo-structure-check.md  site-health-check.md  traffic-analysis.md
.claude/workflows/: bug-fix.md  feedback-loop.md  new-tool.md  publish.md
.github/: FUNDING.yml
.skill-seekers-output/blog-article-structure/: SKILL.md
.skill-seekers-output/competitor-keyword-analysis/: SKILL.md
.skill-seekers-output/gsc-3-checks/: SKILL.md
.skill-seekers-output/gsc-performance/: SKILL.md
.skill-seekers-output/keyword-research-intro/: SKILL.md
.skill-seekers-output/keyword-research-mistakes/: SKILL.md
.skill-seekers-output/neuro-seo-system/: SKILL.md
.skill-seekers-output/seo-copilot-presentation/: SKILL.md
.skill-seekers-output/seo-importance-2025/: SKILL.md
.skill-seekers-output/serp-overlap-visibly/: SKILL.md
output/: keyword-research-intro_video_extracted.json  seo-copilot-presentation_video_extracted.json  serp-overlap-visibly_video_extracted.json  visibly-ai-intro_video_extracted.json
src/visiblyai_mcp/: __init__.py  cli.py  (+4 more)
tests/: conftest.py  test_api_client.py  test_classifier.py  test_free_tools.py  test_google_tools.py  test_paid_tools.py  test_server_registration.py
(+29 files in other folders)
