[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visiblyai-mcp-server"
version = "0.5.3"
description = "MCP server for VisiblyAI SEO tools - free local tools + paid API-powered SEO analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Antonio Blago", email = "info@antonioblago.com" }
]
keywords = ["mcp", "seo", "visiblyai", "claude", "keyword-research", "backlinks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
visiblyai-mcp-server = "visiblyai_mcp.server:main"

[project.urls]
Homepage = "https://antonioblago.com"
Documentation = "https://antonioblago.com/docs/mcp-server"
Repository = "https://github.com/antonioblago/visiblyai-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/visiblyai_mcp"]